docs: better readme, other docs
